--- a/disable_transparent_hugepages.yml
+++ b/disable_transparent_hugepages.yml
@@ -33,4 +33,14 @@
         pre_reboot_delay: 0
         post_reboot_delay: 30
         test_command: whoami
+      changed_when: true
+      notify: Check Satellite services health
+
+    - name: Check Satellite services health
+      ansible.builtin.command: >-
+        satellite-maintain service status --brief
+      register: satellite_service_health
+      until: satellite_service_health.stdout.find("All services are running                                            [OK]") != -1
+      retries: 15
+      delay: 20
 ...
