--- a/host_vars/satellite.example.com/activation_keys.yml
+++ b/host_vars/satellite.example.com/activation_keys.yml
@@ -23,14 +23,14 @@ satellite_activation_keys:
     lifecycle_environment: "RHEL8_Prod"
     content_view: "RHEL8"
     release_version: "8.8"
-  # Community Enterprise Linux 7
-  - name: "CentOS7_Dev"
-    lifecycle_environment: "CentOS7_Dev"
-    content_view: "CentOS7"
-  - name: "CentOS7_QA"
-    lifecycle_environment: "CentOS7_QA"
-    content_view: "CentOS7"
-  - name: "CentOS7_Prod"
-    lifecycle_environment: "CentOS7_Prod"
-    content_view: "CentOS7"
+  # Oracle Linux 7
+  - name: "OL7_Dev"
+    lifecycle_environment: "OL7_Dev"
+    content_view: "OL7"
+  - name: "OL7_QA"
+    lifecycle_environment: "OL7_QA"
+    content_view: "OL7"
+  - name: "OL7_Prod"
+    lifecycle_environment: "OL7_Prod"
+    content_view: "OL7"
 ...
