--- a/host_vars/satellite.example.com/lifecycle_environments.yml
+++ b/host_vars/satellite.example.com/lifecycle_environments.yml
@@ -14,11 +14,11 @@ satellite_lifecycle_environments:
     prior: "RHEL8_Dev"
   - name: "RHEL8_Prod"
     prior: "RHEL8_QA"
-  # Community Enterprise Linux 7
-  - name: "CentOS7_Dev"
+  # Oracle Linux 7
+  - name: "OL7_Dev"
     prior: "Library"
-  - name: "CentOS7_QA"
-    prior: "CentOS7_Dev"
-  - name: "CentOS7_Prod"
-    prior: "CentOS7_QA"
+  - name: "OL7_QA"
+    prior: "OL7_Dev"
+  - name: "OL7_Prod"
+    prior: "OL7_QA"
 ...
