--- a/host_vars/satellite.example.com/repositories.yml
+++ b/host_vars/satellite.example.com/repositories.yml
@@ -6,18 +6,28 @@ satellite_products:
         releasever: "8.8"
       - name: "Red Hat Enterprise Linux 8 for x86_64 - AppStream (RPMs)"
         releasever: "8.8"
-  - name: Oracle OS 7
+  - name: Oracle Linux 7
     repositories:
-      - name: CentOS-7 - Base RPMs x86_64
+      - name: Oracle Linux 7Server Latest x86_64
         content_type: yum
-        url: http://mirror.centos.org/centos/7/os/x86_64/
-        gpg_key: RPM-GPG-KEY-CentOS-7
-      - name: CentOS-7 - Updates RPMs x86_64
+        url: https://yum.oracle.com/repo/OracleLinux/OL7/latest/x86_64/
+        gpg_key: RPM-GPG-KEY-oracle
+      - name: Oracle Linux 7Server Optional Latest x64_64
         content_type: yum
-        url: http://mirror.centos.org/centos/7/updates/x86_64/
-      - name: CentOS-7 - Extras RPMs x86_64
+        url: https://yum.oracle.com/repo/OracleLinux/OL7/optional/latest/x86_64/
+        gpg_key: RPM-GPG-KEY-oracle
+      - name: Latest Unbreakable Enterprise Kernel Release 6 for Oracle Linux 7Server x86_64
         content_type: yum
-        url: http://mirror.centos.org/centos/7/extras/x86_64/
+        url: https://yum.oracle.com/repo/OracleLinux/OL7/UEKR6/x86_64/
+        gpg_key: RPM-GPG-KEY-oracle
+      - name: Latest Unbreakable Enterprise Kernel Release 5 for Oracle Linux 7Server x86_64
+        content_type: yum
+        url: https://yum.oracle.com/repo/OracleLinux/OL7/UEKR5/x86_64/
+        gpg_key: RPM-GPG-KEY-oracle
+      - name: Latest Unbreakable Enterprise Kernel Release 4 for Oracle Linux 7Server x86_64
+        content_type: yum
+        url: https://yum.oracle.com/repo/OracleLinux/OL7/UEKR4/x86_64/
+        gpg_key: RPM-GPG-KEY-oracle
   - name: Extra Packages for Enterprise Linux 7
     repositories:
       - name:  Extra Packages for Enterprise Linux 7 x86_64
