--- a/c2r_analysis.yml
+++ b/c2r_analysis.yml
@@ -1,6 +1,6 @@
 ---
 - name: Convert2rhel pre-conversion analysis
-  hosts: "{{ centos_lifecycle_environment | default(omit) }}"
+  hosts: "{{ oracle_lifecycle_environment | default(omit) }}"
   strategy: ansible.builtin.free
   gather_facts: true
   become: true
@@ -12,16 +12,16 @@
     rhsm_password: ""
     rhsm_org: "{{ org_id }}"
     rhsm_activation_key: "{{ rhel_lifecycle_environment }}"
-    rhsm_activation_key_pre_convert: "{{ centos_lifecycle_environment }}"
+    rhsm_activation_key_pre_convert: "{{ oracle_lifecycle_environment }}"
   tasks:
     - name: Verify operating system
       ansible.builtin.assert:
         that:
-          - "ansible_distribution == 'CentOS'"
+          - "ansible_distribution == 'OracleLinux'"
           - "ansible_distribution_major_version | int  == 7"
           - "ansible_distribution_version.split('.')[1] | int >= 9"
-        fail_msg: "CentOS 7 minor release must be >= 9"
-        success_msg: "CentOS 7 minor release minimum requirement met, continue..."
+        fail_msg: "OracleLinux 7 minor release must be >= 9"
+        success_msg: "OracleLinux 7 minor release minimum requirement met, continue..."
 
     - name: Install convert2rhel utility
       ansible.builtin.import_role:
@@ -81,13 +81,13 @@
         path: "{{ package_dl_tempdir.path }}"
         state: absent
 
-    - name: Get paths to CentOS repos
+    - name: Get paths to Oracle repos
       ansible.builtin.find:
         paths: /etc/yum.repos.d
-        patterns: 'CentOS*.repo'
+        patterns: '*.repo'
       register: centos_repos
 
-    - name: Remove CentOS repos that were placed by infra.convert2rhel analysis role
+    - name: Remove Oracle repos that were placed by infra.convert2rhel analysis role
       ansible.builtin.file:
         path: "{{ item.path }}"
         state: absent
