--- a/c2r_convert.yml
+++ b/c2r_convert.yml
@@ -16,11 +16,11 @@
     - name: Verify operating system
       ansible.builtin.assert:
         that:
-          - "ansible_distribution == 'CentOS'"
+          - "ansible_distribution == 'OracleLinux'"
           - "ansible_distribution_major_version | int  == 7"
           - "ansible_distribution_version.split('.')[1] | int >= 9"
-        fail_msg: "CentOS 7 minor release must be >= 9"
-        success_msg: "CentOS 7 minor release minimum requirement met, continue..."
+        fail_msg: "OracleLinux 7 minor release must be >= 9"
+        success_msg: "OracleLinux 7 minor release minimum requirement met, continue..."
 
     - name: Set delay time via gather_facts
       ansible.builtin.set_fact:
