--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -87,7 +87,7 @@ controller_templates:
           choices: "{{ hostvars['satellite.example.com']['satellite_content_views'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list}}"
           required: true
 
-  - name: SATELLITE / CentOS - Publish Content View
+  - name: SATELLITE / Oracle - Publish Content View
     project: Automated Management
     playbook: satellite_publish.yml
     inventory: Workshop Inventory
@@ -106,7 +106,7 @@ controller_templates:
         - question_name: Select Content View
           variable: content_view
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['satellite_content_views'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_content_views'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list}}"
           required: true
 
   - name: SATELLITE / RHEL - Promote Content View
@@ -139,7 +139,7 @@ controller_templates:
           choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list}}"
           required: true
 
-  - name: SATELLITE / CentOS - Promote Content View
+  - name: SATELLITE / Oracle - Promote Content View
     project: Automated Management
     playbook: satellite_promote.yml
     inventory: Workshop Inventory
@@ -156,17 +156,17 @@ controller_templates:
         - question_name: Select Content View
           variable: content_view
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['satellite_content_views'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_content_views'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list}}"
           required: true
         - question_name: Current Lifecycle Environment
           variable: current_lifecycle_environment
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list}}"
           required: true
         - question_name: Next Lifecycle Environment
           variable: lifecycle_environment
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list}}"
           required: true  
 
   - name: SATELLITE / Delete host(s) in "node_group"
@@ -294,7 +294,7 @@ controller_templates:
         - question_name: Select inventory group
           type: multiplechoice
           variable: dynamic_inventory_group
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list }}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list }}"
           required: true
         - question_name: Include kernel updates? (Kernel update will result in system reboot)
           type: multiplechoice
@@ -441,10 +441,10 @@ controller_templates:
       name: ''
       description: ''
       spec:
-        - question_name: Select CentOS Group to analyze
-          variable: centos_lifecycle_environment
+        - question_name: Select Oracle Group to analyze
+          variable: oracle_lifecycle_environment
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list}}"
           required: true
         - question_name: Select RHEL Lifecycle Environment to use for analysis
           variable: rhel_lifecycle_environment
@@ -472,10 +472,10 @@ controller_templates:
       name: ''
       description: ''
       spec:
-        - question_name: Select CentOS Group to convert
+        - question_name: Select Oracle Group to convert
           variable: dynamic_inventory_group
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list}}"
           required: true
         - question_name: Select target RHEL Lifecycle Environment to convert to
           variable: rhel_lifecycle_environment
