--- a/group_vars/control/worflow_job_templates.yml
+++ b/group_vars/control/worflow_job_templates.yml
@@ -15,10 +15,10 @@ controller_workflows:
       name: ''
       description: ''
       spec:
-        - question_name: Select CentOS Group to convert
+        - question_name: Select Oracle Group to convert
           variable: dynamic_inventory_group
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list}}"
           required: true
         - question_name: Select target RHEL Lifecycle Environment to convert to
           variable: rhel_lifecycle_environment
@@ -96,7 +96,7 @@ controller_workflows:
         - question_name: Select inventory group
           type: multiplechoice
           variable: dynamic_inventory_group
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list}}"
           required: true
     ask_limit_on_launch: true
     simplified_workflow_nodes:
