--- a/setup_controller_creds.yml
+++ b/setup_controller_creds.yml
@@ -20,10 +20,10 @@
         ssh_key_data: "{{ lookup('file', playbook_dir +'/' + ec2_name_prefix + '/' + ec2_name_prefix + '-private.pem') }}"
         kind: ssh
 
-    - name: add CentOS node SSH credential into Ansible Controller
+    - name: add OracleLinux node SSH credential into Ansible Controller
       awx.awx.credential:
         username: ec2-user
-        name: "CentOS SSH Credential"
+        name: "OracleLinux SSH Credential"
         ssh_key_data: "{{ lookup('file', playbook_dir +'/' + ec2_name_prefix + '/' + ec2_name_prefix + '-private.pem') }}"
         kind: ssh
     #### END OF CREDENTIAL
