--- a/host_vars/satellite.example.com/repositories.yml
+++ b/host_vars/satellite.example.com/repositories.yml
@@ -11,23 +11,23 @@ satellite_products:
       - name: Oracle Linux 7Server Latest x86_64
         content_type: yum
         url: https://yum.oracle.com/repo/OracleLinux/OL7/latest/x86_64/
-        gpg_key: RPM-GPG-KEY-oracle
+        gpg_key: RPM-GPG-KEY-oracle-ol7
       - name: Oracle Linux 7Server Optional Latest x64_64
         content_type: yum
         url: https://yum.oracle.com/repo/OracleLinux/OL7/optional/latest/x86_64/
-        gpg_key: RPM-GPG-KEY-oracle
+        gpg_key: RPM-GPG-KEY-oracle-ol7
       - name: Latest Unbreakable Enterprise Kernel Release 6 for Oracle Linux 7Server x86_64
         content_type: yum
         url: https://yum.oracle.com/repo/OracleLinux/OL7/UEKR6/x86_64/
-        gpg_key: RPM-GPG-KEY-oracle
+        gpg_key: RPM-GPG-KEY-oracle-ol7
       - name: Latest Unbreakable Enterprise Kernel Release 5 for Oracle Linux 7Server x86_64
         content_type: yum
         url: https://yum.oracle.com/repo/OracleLinux/OL7/UEKR5/x86_64/
-        gpg_key: RPM-GPG-KEY-oracle
+        gpg_key: RPM-GPG-KEY-oracle-ol7
       - name: Latest Unbreakable Enterprise Kernel Release 4 for Oracle Linux 7Server x86_64
         content_type: yum
         url: https://yum.oracle.com/repo/OracleLinux/OL7/UEKR4/x86_64/
-        gpg_key: RPM-GPG-KEY-oracle
+        gpg_key: RPM-GPG-KEY-oracle-ol7
   - name: Extra Packages for Enterprise Linux 7
     repositories:
       - name:  Extra Packages for Enterprise Linux 7 x86_64
