become: true, plus full path for get_url, switch to FQMN

--- a/oracle_gpg_key_import.yml
+++ b/oracle_gpg_key_import.yml
@@ -1,8 +1,9 @@
 ---
 - hosts: all
+  become: true
   tasks:
   - name: Create gpg key directory for importing keys
-    file:
+    ansible.builtin.file:
       path: "{{ item }}"
       state: directory
       mode: 0755
@@ -10,15 +11,15 @@
       - /etc/pki/rpm-gpg/import
 
   - name: Pull down Oracle Linux 7 GPG key
-    get_url:
+    ansible.builtin.get_url:
       url: https://yum.oracle.com/RPM-GPG-KEY-oracle-ol7
-      dest: /etc/pki/rpm-gpg/import
+      dest: /etc/pki/rpm-gpg/import/RPM-GPG-KEY-oracle-ol7
       mode: '0440'
     register: getoracle7gpgkey
     until: getoracle7gpgkey is succeeded
 
   - name: hammer org list
-    command: >-
+    ansible.builtin.command: >-
       hammer --output json organization list
     register: hammer_org_list_result
     ignore_errors: true
@@ -29,11 +30,11 @@
       my_query: "[?Name=='{{ organization }}'].Id"
 
   - name: What is the Org Id? 
-    debug:
+    ansible.builtin.debug:
       msg: "The Org Id selected is: {{ sat_org_id[0] }}"
 
   - name: hammer create RPM-GPG-KEY-oracle-ol7 key
-    command: >-
+    ansible.builtin.command: >-
       hammer content-credentials create --organization-id {{ sat_org_id[0] }}
       --key "/etc/pki/rpm-gpg/import/RPM-GPG-KEY-oracle-ol7"
       --name "RPM-GPG-KEY-oracle-ol7"
@@ -42,6 +43,6 @@
     ignore_errors: true
 
   - name: RPM-GPG-KEY-oracle-ol7 key creation output 
-    debug:
+    ansible.builtin.debug:
       msg: "{{ hammer_oracle_gpgkey_result.stdout }}"
 ...
