--- a/oracle_gpg_key_import.yml
+++ b/oracle_gpg_key_import.yml
@@ -36,7 +36,7 @@
   - name: hammer create RPM-GPG-KEY-oracle-ol7 key
     ansible.builtin.command: >-
       hammer content-credentials create --organization-id {{ sat_org_id[0] }}
-      --key "/etc/pki/rpm-gpg/import/RPM-GPG-KEY-oracle-ol7"
+      --path "/etc/pki/rpm-gpg/import/RPM-GPG-KEY-oracle-ol7"
       --name "RPM-GPG-KEY-oracle-ol7"
       --content-type gpg_key
     register: hammer_oracle_gpgkey_result
