--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -579,7 +579,7 @@ controller_templates:
             - Prod
           required: true
 
-  - name: SETUP / Satellite
+  - name: Z / CaC / Satellite
     project: Automated Management
     playbook: setup_satellite.yml
     inventory: Workshop Inventory
@@ -588,11 +588,10 @@ controller_templates:
       - Workshop Credential
     extra_vars:
       refresh_satellite_manifest: false
-      bulk_load_size: 1000
+    ask_variables_on_launch: true
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
-    ask_variables_on_launch: true
 
   - name: Insights / Replace Satellite Manifest
     project: Automated Management
