--- a/setup_satellite_infra_subtasks.yml
+++ b/setup_satellite_infra_subtasks.yml
@@ -9,7 +9,12 @@
     ansible.builtin.include_tasks: satellite_hammer_task_resume.yml
     when: infra_subtasks_retry_count | int != 0
 
-  - name: execute redhat.satellite.repositories role
+  - name: Execute redhat.satellite.content_credentials role
+    ansible.builtin.import_role:
+      name: "redhat.satellite.content_credentials"
+    delegate_to: localhost
+
+  - name: Execute redhat.satellite.repositories role
     ansible.builtin.import_role:
       name: "redhat.satellite.repositories"
     delegate_to: localhost
