--- a/host_vars/satellite.example.com/content_views.yml
+++ b/host_vars/satellite.example.com/content_views.yml
@@ -48,4 +48,23 @@ satellite_content_views:
       product: 'Community Enterprise OS 7'
     - name: CentOS-7 - Updates RPMs x86_64
       product: 'Community Enterprise OS 7'
+  # Oracle Linux 7
+  - name: OL7
+    content_view: OL7
+    content_view_update: true
+    lifecycle_environments:
+      - "OL7_Dev"
+      - "OL7_QA"
+      - "OL7_Prod"
+    repositories:
+    - name: Oracle Linux 7Server Latest x86_64
+      product: 'Oracle Linux 7'
+    - name: Oracle Linux 7Server Optional Latest x64_64
+      product: 'Oracle Linux 7'
+    - name: Latest Unbreakable Enterprise Kernel Release 6 for Oracle Linux 7Server x86_64
+      product: 'Oracle Linux 7'
+    - name: Latest Unbreakable Enterprise Kernel Release 5 for Oracle Linux 7Server x86_64
+      product: 'Oracle Linux 7'
+    - name: Latest Unbreakable Enterprise Kernel Release 4 for Oracle Linux 7Server x86_64
+      product: 'Oracle Linux 7'
 ...
