Include Oracle Linux 7 repositories.

--- a/host_vars/satellite.example.com/repositories.yml
+++ b/host_vars/satellite.example.com/repositories.yml
@@ -18,6 +18,28 @@ satellite_products:
       - name: CentOS-7 - Extras RPMs x86_64
         content_type: yum
         url: http://mirror.centos.org/centos/7/extras/x86_64/
+  - name: Oracle Linux 7
+    repositories:
+      - name: Oracle Linux 7Server Latest x86_64
+        content_type: yum
+        url: https://yum.oracle.com/repo/OracleLinux/OL7/latest/x86_64/
+        gpg_key: RPM-GPG-KEY-oracle-ol7
+      - name: Oracle Linux 7Server Optional Latest x64_64
+        content_type: yum
+        url: https://yum.oracle.com/repo/OracleLinux/OL7/optional/latest/x86_64/
+        gpg_key: RPM-GPG-KEY-oracle-ol7
+      - name: Latest Unbreakable Enterprise Kernel Release 6 for Oracle Linux 7Server x86_64
+        content_type: yum
+        url: https://yum.oracle.com/repo/OracleLinux/OL7/UEKR6/x86_64/
+        gpg_key: RPM-GPG-KEY-oracle-ol7
+      - name: Latest Unbreakable Enterprise Kernel Release 5 for Oracle Linux 7Server x86_64
+        content_type: yum
+        url: https://yum.oracle.com/repo/OracleLinux/OL7/UEKR5/x86_64/
+        gpg_key: RPM-GPG-KEY-oracle-ol7
+      - name: Latest Unbreakable Enterprise Kernel Release 4 for Oracle Linux 7Server x86_64
+        content_type: yum
+        url: https://yum.oracle.com/repo/OracleLinux/OL7/UEKR4/x86_64/
+        gpg_key: RPM-GPG-KEY-oracle-ol7
   - name: Extra Packages for Enterprise Linux 7
     repositories:
       - name:  Extra Packages for Enterprise Linux 7 x86_64
@@ -30,7 +52,7 @@ satellite_products:
         url: https://download.fedoraproject.org/pub/epel/8/Everything/x86_64/
   - name: Foreman Client
     repositories:
-      - name: Foreman Client CentOS 7
+      - name: Foreman Client Enterprise Linux 7 x86_64
         url: https://yum.theforeman.org/client/latest/el7/x86_64/
         content_type: yum
 ...
