--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -294,7 +294,7 @@ controller_templates:
         - question_name: Select inventory group
           type: multiplechoice
           variable: dynamic_inventory_group
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list }}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list }}"
           required: true
         - question_name: Include kernel updates? (Kernel update will result in system reboot)
           type: multiplechoice
@@ -314,31 +314,27 @@ controller_templates:
           required: false
     ask_limit_on_launch: true
 
-  - name: SERVER / RHEL7 - Fact Scan
+  - name: SERVER / Fact Scan
     project: Fact Scan
     playbook: scan_facts.yml
     inventory: EC2 Dynamic Inventory
-    ask_limit_on_launch: true
     use_fact_cache: true
     credentials:
       - Workshop Credential
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
-    limit: cv_RHEL7
-
-  - name: SERVER / CentOS7 - Fact Scan
-    project: Fact Scan
-    playbook: scan_facts.yml
-    inventory: EC2 Dynamic Inventory
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Select inventory group
+          type: multiplechoice
+          variable: dynamic_inventory_group
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list }}"
+          required: true
     ask_limit_on_launch: true
-    use_fact_cache: true
-    credentials:
-      - Workshop Credential
-    notification_templates_started: Telemetry
-    notification_templates_success: Telemetry
-    notification_templates_error: Telemetry
-    limit: cv_CentOS7
 
   - name: SERVER / Start node via ec2_node_tools
     description: Start node - selection via EC2 instance tags
@@ -441,10 +437,10 @@ controller_templates:
       name: ''
       description: ''
       spec:
-        - question_name: Select CentOS Group to analyze
-          variable: centos_lifecycle_environment
+        - question_name: Select EL Group to analyze
+          variable: dynamic_inventory_group
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list }}"
           required: true
         - question_name: Select RHEL Lifecycle Environment to use for analysis
           variable: rhel_lifecycle_environment
@@ -453,8 +449,8 @@ controller_templates:
           required: true
     ask_limit_on_launch: true
 
-  - name: OS / Convert / CentOS7 to RHEL7
-    description: Convert OS to RHEL OS via targetted LE
+  - name: OS / Convert to RHEL7
+    description: Convert EL OS to RHEL OS via targetted LE
     project: Automated Management
     playbook: c2r_convert.yml
     inventory: EC2 Dynamic Inventory
@@ -472,10 +468,10 @@ controller_templates:
       name: ''
       description: ''
       spec:
-        - question_name: Select CentOS Group to convert
+        - question_name: Select EL Group to convert
           variable: dynamic_inventory_group
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list }}"
           required: true
         - question_name: Select target RHEL Lifecycle Environment to convert to
           variable: rhel_lifecycle_environment
